# Arm-IoT

./: .gitignore  CMakeLists.txt  Makefile.arm  README.md  avh.yml  avh_key  avh_key.pub  build.sh  gcc_arm.ld
.github/workflows/: avh.yml  build.yml
cmake/: toolchain-avh.cmake
config/: avh.gold.yml
include/: gpio.h
src/: gpio.c  main.c  startup.c
toolchains/: arm-toolchain.cmake
